[package]
name = "bayeslog"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0.97"
chrono = { version = "0.4.40", features = ["serde"] }
lru = "0.13.0"
ndarray = "0.16.1"
priority-queue = "2.3.1"
rand = "0.8.5"
r2d2 = "0.8.10"
r2d2_sqlite = "0.27.0"
rayon = "1.10.0"
rusqlite = {version = "0.34.0", features = ["bundled"]}
serde = {version = "1.0.219", features = ["derive"]}
serde_json = "1.0.140"
thiserror = "2.0.12"
uuid = {version = "1.16.0", features = ["v4", "serde"]}
clap = { version = "4.5.36", features = ["derive"] }
env_logger = "0.11.8"
colored = "3.0.0"
log = "0.4.27"
walkdir = "2.5.0"
rocket = { version = "0.5.1", features = ["json"] }

[dev-dependencies]
tempfile = "3.10.1"
